Finish calculator project.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="screen">0</div>
         <div class="keys">
           <div class="keys-row">
-            <button class="key clear gray">C</button>
-            <button class="key operator gray">&PlusMinus;</button>
+            <button class="key clear gray" value="clear">C</button>
+            <button class="key operator gray" value="±">&PlusMinus;</button>
             <!-- prettier-ignore -->
             <button class="key operator gray" value="%">&percnt;</button>
             <button class="key operator" value="/">&div;</button>
@@ -32,7 +32,7 @@
           </div>
           <div class="keys-row">
             <button class="key digit" value="1">1</button>
-            <button class="key digit" value="1">2</button>
+            <button class="key digit" value="2">2</button>
             <button class="key digit" value="3">3</button>
             <button class="key operator" value="+">&plus;</button>
           </div>
